--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,7 +1,9 @@
 @import 'components/header/header';
+@import 'components/main/main';
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Arial', sans-serif;
 }
