--- a/styles/style.css
+++ b/styles/style.css
@@ -89,6 +89,30 @@ main .main__s2 img {
   border-radius: 12px;
 }
 
+footer {
+  background-color: #f2f2f5;
+  padding: 40px 0;
+  text-align: center;
+}
+footer section {
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+}
+footer img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-bottom: 20px;
+}
+footer h3 {
+  margin-bottom: 10px;
+  font-size: 24px;
+}
+footer p {
+  font-size: 16px;
+}
+
 * {
   margin: 0;
   padding: 0;
