--- a/styles/components/main/_main.scss
+++ b/styles/components/main/_main.scss
@@ -58,4 +58,52 @@ main{
             border-radius: 12px;
         }
     }
+    // ...existing code...
+
+
+}
+
+@media (max-width: 480px) {
+    main {
+        width: 100%;
+        flex-direction: column;
+        height: auto;
+        padding: 20px 10px;
+
+        .main__s1 {
+            margin-left: 0;
+            width: 100%;
+
+            h1 {
+                font-size: 28px;
+            }
+            p {
+                width: 100%;
+                font-size: 16px;
+            }
+            div {
+                flex-direction: column;
+                align-items: stretch;
+
+                input {
+                    width: 100%;
+                    margin-bottom: 10px;
+                }
+                button {
+                    width: 100%;
+                    height: 36px;
+                    font-size: 14px;
+                    margin-right: 0;
+                }
+            }
+        }
+
+        .main__s2 {
+            img {
+               width: 300px;
+                height: auto;
+                margin-top: 20px;
+            }
+        }
+    }
 }
