--- a/styles/components/reseñas/_footer.scss
+++ b/styles/components/reseñas/_footer.scss
@@ -12,7 +12,7 @@ footer{
     img{
         width: 50px;
         height: 50px;
-        border-radius: 50%;;
+        border-radius: 50%;
         margin-bottom: 20px;
     }
     h3{
@@ -21,7 +21,10 @@ footer{
     }
     p{
         font-size: 16px;
-        
+        .star{
+            color: goldenrod;
+            font-size: 20px;
+        }
     }
 }
 
