--- a/styles/style.css
+++ b/styles/style.css
@@ -136,7 +136,7 @@ main .main__s2 img {
   }
   main .main__s1 div button {
     width: 100%;
-    height: 36px;
+    height: 39px;
     font-size: 14px;
     margin-right: 0;
   }
@@ -168,6 +168,10 @@ footer h3 {
 }
 footer p {
   font-size: 16px;
+}
+footer p .star {
+  color: goldenrod;
+  font-size: 20px;
 }
 
 @media (max-width: 480px) {
