--- a/styles/components/reseñas/_footer.scss
+++ b/styles/components/reseñas/_footer.scss
@@ -21,9 +21,14 @@ footer{
     }
     p{
         font-size: 16px;
+        
         .star{
             color: goldenrod;
             font-size: 20px;
+        }
+        .number{
+            font-weight: 600;
+            margin: 0 6px;
         }
     }
 }
