--- a/styles/components/reseñas/_footer.scss
+++ b/styles/components/reseñas/_footer.scss
@@ -42,6 +42,7 @@ footer{
         }
         h3 {
             font-size: 18px;
+            padding: 0 12px;
         }
         p {
             font-size: 14px;
