--- a/styles/style.css
+++ b/styles/style.css
@@ -136,7 +136,7 @@ main .main__s2 img {
   }
   main .main__s1 div button {
     width: 100%;
-    height: 36px;
+    height: 39px;
     font-size: 14px;
     margin-right: 0;
   }
@@ -186,6 +186,7 @@ footer p {
   }
   footer h3 {
     font-size: 18px;
+    padding: 0 12px;
   }
   footer p {
     font-size: 14px;
