--- a/styles/components/header/_header.scss
+++ b/styles/components/header/_header.scss
@@ -44,7 +44,9 @@ header{
                 height: 32px;
             }
             button {
-                margin-right: 10px;
+                margin-right: 0;
+                position: relative;
+                right: 0;
                 width: 80px;
                 height: 32px;
                 font-size: 14px;
