--- a/styles/components/main/_main.scss
+++ b/styles/components/main/_main.scss
@@ -18,7 +18,7 @@ main{
             line-height: 1.5;
            
         }
-        div{
+        form{
             margin-top: 20px;
             display: flex;
             align-items: center;
@@ -81,7 +81,7 @@ main{
                 width: 100%;
                 font-size: 16px;
             }
-            div {
+            form {
                 flex-direction: column;
                 align-items: stretch;
 
