--- a/styles/style.css
+++ b/styles/style.css
@@ -73,13 +73,13 @@ main .main__s1 p {
   width: 400px;
   line-height: 1.5;
 }
-main .main__s1 div {
+main .main__s1 form {
   margin-top: 20px;
   display: flex;
   align-items: center;
   justify-content: flex-start;
 }
-main .main__s1 div input {
+main .main__s1 form input {
   width: 250px;
   height: 40px;
   border-radius: 20px;
@@ -89,7 +89,7 @@ main .main__s1 div input {
   outline: none;
   margin-right: 10px;
 }
-main .main__s1 div button {
+main .main__s1 form button {
   margin-right: 30px;
   width: 120px;
   height: 40px;
@@ -101,7 +101,7 @@ main .main__s1 div button {
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
-main .main__s1 div button:hover {
+main .main__s1 form button:hover {
   background-color: #0056b3;
 }
 main .main__s2 img {
@@ -128,15 +128,15 @@ main .main__s2 img {
     width: 100%;
     font-size: 16px;
   }
-  main .main__s1 div {
+  main .main__s1 form {
     flex-direction: column;
     align-items: stretch;
   }
-  main .main__s1 div input {
+  main .main__s1 form input {
     width: 100%;
     margin-bottom: 10px;
   }
-  main .main__s1 div button {
+  main .main__s1 form button {
     width: 100%;
     height: 39px;
     font-size: 14px;
