--- a/styles/components/main/_main.scss
+++ b/styles/components/main/_main.scss
@@ -58,6 +58,8 @@ main{
         img{
             width: 500px;
             height: 400px;
+            position: relative;
+            right: 150px;
             border-radius: 12px;
         }
     }
