--- a/styles/style.css
+++ b/styles/style.css
@@ -110,6 +110,8 @@ main .main__s1 form button:hover {
 main .main__s2 img {
   width: 500px;
   height: 400px;
+  position: relative;
+  right: 150px;
   border-radius: 12px;
 }
 
