--- a/styles/components/reseñas/_footer.scss
+++ b/styles/components/reseñas/_footer.scss
@@ -10,8 +10,9 @@ footer{
         
     }
     img{
-        width: 50px;
-        height: 50px;
+        width: 60px;
+        height: 60px;
+        object-fit: cover;
         border-radius: 50%;
         margin-bottom: 20px;
     }
