--- a/styles/style.css
+++ b/styles/style.css
@@ -164,8 +164,10 @@ footer section {
   justify-content: center;
 }
 footer img {
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
+  -o-object-fit: cover;
+     object-fit: cover;
   border-radius: 50%;
   margin-bottom: 20px;
 }
