Se modifica la relacion aspecto de la imagen del main

--- a/styles/components/main/_main.scss
+++ b/styles/components/main/_main.scss
@@ -61,6 +61,7 @@ main{
             position: relative;
             right: 150px;
             border-radius: 12px;
+            object-fit: cover;
         }
     }
     // ...existing code...
